# trooper

./: Cargo.toml  LICENSE  README.md
assets/: default_config.ini
src/: app.rs  command_mode.rs  main.rs  ui.rs
