[package]
name = "trooper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
dirs = "4.0.0"
fs_extra = "1.2.0"
serde = { version = "1.0.152", features = [ "derive" ] }
serde_json = "1.0.91"
tui = { version = "0.19.0", features = ["crossterm"], default-features = false }
