[package]
name = "trooper"
version = "0.3.0"
edition = "2021"
description = "An EXPERIMENTAL file manager inspired by ranger."
license="GPL-2.0-only"
authors = ["Vincent Udén <vincentuden@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = "3.0.2"
crossterm = "0.25.0"
dirs = "4.0.0"
fs_extra = "1.2.0"
home = "0.5.4"
regex = "1.7.1"
serde = { version = "1.0.152", features = [ "derive" ] }
serde_json = "1.0.91"
strum = { version = "0.24.1", features = [ "derive" ] }
tui = { version = "0.19.0", features = ["crossterm"], default-features = false }
